--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ h2{
 	font-family: SFProDisplay;
 	font-style: normal;
 	font-weight: 600;
-	font-size: 48px;
+	font-size: 35px;
 	line-height: 104%;
 	display: flex;
 	align-items: center;
@@ -270,7 +270,7 @@ h2{
 }
 
 .redes-container {
-	width: 1280px;
+	max-width: 80vw;
 	height: 452px;
 	top: 305%;
 	bottom: 10%;
@@ -287,7 +287,7 @@ h2{
 	font-family: SFProDisplay;
 	font-style: normal;
 	font-weight: 600;
-	font-size: 48px;
+	font-size: 45px;
 	line-height: 72px;
 	display: flex;
 	align-items: center;
@@ -326,7 +326,7 @@ h2{
 .form-container {
 	width: 488px;
 	height: 592px;
-	margin-left: 50vw;
+	margin-left: 45vw;
 	bottom: 180px;
 	background: #FFFFFF;
 	box-shadow: 0px 16px 16px rgba(50, 50, 71, 0.08), 0px 24px 32px rgba(50, 50, 71, 0.06);
